# practice

./: .gitignore  Cargo.toml  Makefile  new_day.py  new_question.py  pyproject.toml
daily/jan1/: Cargo.toml  expected.txt  go.mod  solution  solution.cpp  solution.go  solution.py  solution.rs
